--- a/car_rental_test/ClientApp/src/components/styles/globalStyles.css
+++ b/car_rental_test/ClientApp/src/components/styles/globalStyles.css
@@ -26,6 +26,12 @@
     color:white;
   }
 
+  h2{
+    font-weight: 600;
+  }
+  h3{
+    font-weight: 400;
+  }
   /* .navbar-logo{
       width: 150px;
       border : 1px solid #fff;
@@ -2028,6 +2034,7 @@
     height: 20rem;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5rem;
   }
   
@@ -2047,7 +2054,8 @@
   
   .text-content span {
     display: flex;
-    font-size: 2.7rem;
+    font-size: 3.7rem;
+    font-weight: 600;
     gap: 1rem;
     align-items: center;
     color: #ad21ff;
