some minor fixes in Login UI_PANEL

--- a/car_rental_test/ClientApp/src/components/styles/globalStyles.css
+++ b/car_rental_test/ClientApp/src/components/styles/globalStyles.css
@@ -2411,7 +2411,16 @@
   .ui-main{
       padding-top:70px;
   }
-  
+  @media(max-width: 1913px ){
+      .ui-panel{
+          padding-top:10px;
+      }
+  }
+  @media(max-height:821px){
+    .ui-panel{
+      
+    }
+  }
   .background-image {
     position: absolute;
     top: 0;
